--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -18,6 +18,7 @@
     align-items: center;
 
     & .navigation__list__item {
+      padding: 32px 0;
       margin-right: 20px;
       margin-left: 60px;
 
@@ -57,9 +58,12 @@
 
 .search__films {
   width: 400px;
+  height: 30px;
 
   & .search__films__title {
     margin: 0;
+    margin-bottom: 10px;
+    font-size: 12px;
 
     & .search_films_name,
     .search_films_genres {
@@ -77,7 +81,7 @@
     height: 25px;
     background-color: #281f55;
     color: #f7f5ff;
-    // border: none;
+    border: none;
     font-family: Noto Sans TC, sans-serif;
     letter-spacing: 0.03em;
     font-size: 300;
@@ -155,9 +159,6 @@
 
 .user__navigation {
   display: flex;
-}
-
-.user {
   position: relative;
 }
 
