--- a/src/templates/pageLoader.hbs
+++ b/src/templates/pageLoader.hbs
@@ -1,5 +1,16 @@
-<div>
+<div class='modal__container'>
   <h1>
    ЗАГРУЖАЕМ....
   </h1>
+
+    <div class="modal__preloader">
+      <div class="modal__loader">
+        <div class="modal__face">
+          <div class="modal__circle"></div>
+        </div>
+        <div class="modal__face">
+          <div class="modal__circle"></div>
+        </div>
+      </div>
+    </div>
 </div>
