--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -3,6 +3,10 @@ $ListMovieColor: #281f55;
 $headerFooterColor: #30246b;
 $secondaryColor: #f8104d;
 
+$primaryColorCircle: #f8114d;
+$secondaryColorCircle: #fff;
+$backgroundColorCircle: #281f55;
+
 html {
   box-sizing: border-box;
 }
