--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
-// @import './preloaderPage/circle-preloader.scss';
+@import './base/general.scss';
+@import './preloaderPage/circle-preloader.scss';
 // @import './preloaderPage/words-preloader.scss';
 @import './pagination/pagination.scss';
-@import './base/general.scss';
 @import './header/header-logo.scss';
 @import './header/header-registration';
 @import './header/navigation';
@@ -12,3 +12,4 @@
 @import './header/choices';
 @import './header/menu';
 @import './header/menuDesktop';
+@import './modal/modal';
