--- a/src/scss/modal/_modal.scss
+++ b/src/scss/modal/_modal.scss
@@ -1,14 +1,4 @@
-.preloader.modal {
-  width: 20vw;
-
-  .loader {
-    width: 20em;
-    height: 20em;
-    right: 0px;
-  }
-}
-
-.preloader {
+.modal__preloader {
   position: relative;
   color: $secondaryColorCircle;
   font-family: Arial, sans-serif;
@@ -20,17 +10,17 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 200vw;
+  width: 20vw;
   height: 200vh;
   z-index: 99999;
   animation: 5s opacity;
 
-  .loader {
+  .modal__loader {
     position: absolute;
-    right: 400px;
+    right: 0px;
     bottom: 300px;
-    width: 30em;
-    height: 30em;
+    width: 20em;
+    height: 20em;
     font-size: 10px;
     position: relative;
     display: flex;
@@ -38,7 +28,7 @@
     justify-content: center;
     animation: 5s opacity;
 
-    .face {
+    .modal__face {
       position: absolute;
       border-radius: 50%;
       border-style: solid;
@@ -47,8 +37,8 @@
   }
 }
 
-.loader {
-  .face:nth-child(1) {
+.modal__loader {
+  .modal__face:nth-child(1) {
     width: 100%;
     height: 100%;
     color: $secondaryColorCircle;
@@ -58,7 +48,7 @@
     animation-direction: normal;
   }
 
-  .face:nth-child(2) {
+  .modal__face:nth-child(2) {
     width: 70%;
     height: 70%;
     color: $primaryColorCircle;
@@ -69,8 +59,8 @@
   }
 }
 
-.face {
-  .circle {
+.modal__face {
+  .modal__circle {
     position: absolute;
     width: 50%;
     height: 0.1em;
