--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -13,8 +13,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   width: 100%;
+  height: 75px;
+
   & .navigation__list {
     display: flex;
     margin-right: 20px;
@@ -47,8 +48,9 @@
 
 .header-logo-link {
   position: absolute;
-  left: 16px;
-  top: 19px;
+  left: -12px;
+  top: -2px;
+  padding: 12px 55px 12px 25px;
 
   font-weight: 700;
   font-size: 16px;
@@ -75,6 +77,7 @@
   & .search__films__title {
     margin: 0;
     margin-bottom: 10px;
+    margin-left: 10px;
     font-size: 12px;
 
     & .search_films_name,
