--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -11,7 +11,7 @@
   padding-right: 32px;
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
   height: 75px;
@@ -76,9 +76,9 @@
 
   & .search__films__title {
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     margin-left: 10px;
-    font-size: 12px;
+    font-size: 13px;
 
     & .search_films_name,
     .search_films_genres {
@@ -94,6 +94,7 @@
   .genres {
     width: 300px;
     height: 25px;
+    padding: 2.5px 8.5px 3px;
     background-color: #281f55;
     color: #f7f5ff;
     border: none;
