--- a/src/scss/modal/_modal.scss
+++ b/src/scss/modal/_modal.scss
@@ -5,11 +5,11 @@
   font-size: 45px;
   font-weight: 700;
   margin: 0 auto;
-  display: flex;
+  // display: flex;
   position: fixed;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // flex-direction: column;
   width: 20vw;
   height: 200vh;
   z-index: 99999;
@@ -18,7 +18,7 @@
   .modal__loader {
     position: absolute;
     right: 53px;
-    bottom: 338px;
+    bottom: 90px;
     width: 20em;
     height: 20em;
     font-size: 10px;
@@ -35,6 +35,10 @@
       animation: animate 3s linear infinite;
     }
   }
+}
+
+.modal__title_loader {
+  text-align: left;
 }
 
 .modal__loader {
