--- a/src/scss/movieList/_movie-card.scss
+++ b/src/scss/movieList/_movie-card.scss
@@ -120,7 +120,7 @@
   }
   to {
     opacity: 1;
-}
+  }
 }
 
 .card-title-movie {
@@ -172,32 +172,40 @@
   flex-direction: column;
   width: 100%;
   text-align: center;
+  padding-top: 10px;
 }
 
 .list__actors {
   width: 100%;
   flex-wrap: wrap;
   display: grid;
-  grid-gap: 10px;
+
   margin: 0 auto 15px;
   padding: 0;
-}
 
-@media (min-width: 768px) {
-  .list__actors {
+  @media screen and (max-width: 540px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+  }
+
+  @media screen and (min-width: 541px) and (max-width: 767px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+  }
+
+  @media (min-width: 768px) and (max-width: 1023px) {
     grid-template-columns: repeat(5, 1fr);
+    grid-gap: 20px;
   }
-}
-
-@media (min-width: 1024px) {
-  .list__actors {
+  @media (min-width: 1024px) {
     grid-template-columns: repeat(7, 1fr);
+    grid-gap: 20px;
   }
 }
 
-.list__actor-card {
-  padding: 10px 30px 15px 30px;
-}
+// .list__actor-card {
+//   padding: 10px 30px 15px 30px;
+// }
 
 .list__actor-name {
   margin-top: 10px;
