--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -2,26 +2,9 @@
 .watch__later,
 .watched {
   cursor: pointer;
-  color: tomato;
-
-  &:hover {
-    border: 0 0 15px rgb(15, 219, 255), 0 17px 50px 0 rgb(25, 194, 236);
-  }
 
   &.icon_active {
-    color: tomato;
-  }
-}
-
-@media (min-width: 768px) {
-  .list_movies {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media (min-width: 1024px) {
-  .list_movies {
-    grid-template-columns: repeat(4, 1fr);
+    color: $secondaryColor;
   }
 }
 
@@ -29,8 +12,27 @@
   width: 100%;
   flex-wrap: wrap;
   display: grid;
-  grid-gap: 20px;
   margin: 0 auto 15px;
+
+  @media screen and (max-width: 540px) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 25px;
+  }
+
+  @media screen and (min-width: 541px) and (max-width: 767px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+  }
 }
 
 .card {
@@ -43,13 +45,17 @@
 
   .card-img-top {
     width: 100%;
-    height: 440.63px;
+    // height: 440.63px;
     border-radius: 13px 13px 0 0;
   }
 }
 
 .card__movie_markup {
   position: relative;
+
+  & img {
+    display: block;
+  }
 }
 
 .card-text {
