--- a/src/templates/header/dropDownMenu.hbs
+++ b/src/templates/header/dropDownMenu.hbs
@@ -1,5 +1,12 @@
-<li class="menu__list__item"><i class="material-icons">home</i><a href="#">Home</a></li>
-<li class="menu__list__item"><i class="material-icons favorites">favorite_border</i><a href="#">Favorites</a></li>
-<li class="menu__list__item"><i class="material-icons watched">bookmark_border</i><a href="#">Watched</a></li>
-<li class="menu__list__item"><i class="material-icons watch__later">check_circle_outline</i><a href="#">Watched Later</a></li>
-<li class="menu__list__item"><i class="material-icons sensor_door">sensor_door</i><a class="user__logout" href="#">Log out</a></li>
+<li class="menu__list__item"><i class="material-icons icons__header_menu">home</i><a href="#">Home</a></li>
+<li class="menu__list__item"><i class="material-icons icons__header_menu favorites">favorite_border</i>
+    <p class="menu__list__title">Favorites</p>
+</li>
+<li class="menu__list__item"><i class="material-icons icons__header_menu watched">bookmark_border</i>
+    <p class="menu__list__title">Watched</p>
+</li>
+<li class="menu__list__item"><i class="material-icons icons__header_menu watch__later">check_circle_outline</i>
+    <p class="menu__list__title">Watched Later</p>
+</li>
+<li class="menu__list__item"><i class="material-icons icons__header_menu sensor_door">sensor_door</i><a
+        class="user__logout" href="#">Log out</a></li>
