--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 // @import './preloaderPage/words-preloader.scss';
 @import './pagination/pagination.scss';
 @import './header/header-registration';
+@import './header/_input-choice';
 @import './header/navigation';
 @import './header/login';
 @import './movieList/movieList';
