--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,12 +3,13 @@
 // @import './preloaderPage/words-preloader.scss';
 @import './pagination/pagination.scss';
 @import './header/header-registration';
+@import './header/_input-choice';
 @import './header/navigation';
 @import './header/login';
 @import './movieList/movieList';
 @import './movieList/movie-card.scss';
 @import './footer/footer-main.scss';
-@import './header/choices';
+// @import './header/choices';
 @import './header/menu';
 @import './header/menuDesktop';
 @import './modal/modal';
