--- a/src/scss/preloaderPage/_words-preloader.scss
+++ b/src/scss/preloaderPage/_words-preloader.scss
@@ -3,7 +3,7 @@ $secondaryColor: #fff;
 $backgroundColor: #281f55;
 
 .page-preloader {
-  background: $backgroundColor;
+  background: rgba(26, 20, 59, 1);
   width: 100%;
   height: 100%;
   position: fixed;
