--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -46,6 +46,20 @@ img {
 input,
 textarea {
   outline: none;
+  border: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+select {
+  outline: none;
+  border: none;
+}
+
+select:focus {
+  outline: none;
 }
 
 .is-hidden {
