adds header center

--- a/src/scss/header/_header-registration.scss
+++ b/src/scss/header/_header-registration.scss
@@ -101,6 +101,7 @@ a {
 .login-form .group .button {
   margin-top: 10px;
   background: #6152a8;
+  cursor: pointer;
 }
 .login-form .group label .icon {
   width: 15px;
