--- a/src/scss/header/_input-choice.scss
+++ b/src/scss/header/_input-choice.scss
@@ -9,12 +9,18 @@ select[data-multi-select-plugin] {
   display: none !important;
 }
 
+.search-genres {
+  position: relative;
+}
+
 .multi-select-component {
   position: relative;
+  top: -5px;
+  left: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: auto;
+  height: 25px;
 
   padding: 3px 8px;
   font-size: 14px;
@@ -117,7 +123,7 @@ select[data-multi-select-plugin] {
   display: inline-block;
   padding: 10px 5px;
   position: absolute;
-  top: 5px;
+  top: 3px;
   right: 5px;
   width: 10px;
   height: 10px;
@@ -140,6 +146,7 @@ select[data-multi-select-plugin] {
   margin-top: 29px;
   width: 100%;
   right: 0px;
+  top: 0;
   background: #30246b;
   box-shadow: 0 0 2px #6152a8;
   border-top: none;
@@ -158,8 +165,8 @@ select[data-multi-select-plugin] {
   font-size: 14px;
   min-height: 31px;
   animation: drop 0.5s;
-
   animation-fill-mode: forwards;
+  align-items: center;
 }
 
 .search-container ul li:first-child {
