find by ganres and name, clear field input

--- a/src/scss/header/_input-choice.scss
+++ b/src/scss/header/_input-choice.scss
@@ -9,7 +9,6 @@ select[data-multi-select-plugin] {
   display: none !important;
 }
 
-
 .search-genres {
   position: relative;
 }
@@ -27,7 +26,6 @@ select[data-multi-select-plugin] {
   font-size: 14px;
   line-height: 1.42857143;
   padding-bottom: 0px;
-
 
   width: 300px;
 
@@ -55,7 +53,6 @@ select[data-multi-select-plugin] {
 }
 
 .selected-wrapper {
-
   box-sizing: border-box;
 
   border-radius: 3px;
@@ -191,7 +188,6 @@ select[data-multi-select-plugin] {
 }
 
 .search-container ul li:hover {
-
   // background: #30246b;
   // box-shadow: 0 0 2px #6152a8;
   color: $secondaryColor;
@@ -202,4 +198,12 @@ select[data-multi-select-plugin] {
 .autocomplete-list {
   max-height: 130px;
   overflow-y: auto;
+}
+
+.selected-close:hover {
+  cursor: pointer;
+}
+
+.dropdown-icon:hover {
+  cursor: pointer;
 }
