--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -42,6 +42,7 @@
   border-radius: 13px;
 
   .card-img-top {
+    cursor: pointer;
     width: 100%;
     height: 440.63px;
     border-radius: 13px 13px 0 0;
