--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -1,17 +1,15 @@
 {{#each this}}
-<div data-id={{id}} class="card">
+<div data-id={{id}} class="card" data-poster={{poster_path}} data-vote={{vote_average}} data-title={{title}} data-release={{release_date}}>
 
     <div class="card__movie_markup">
-        <a class="card__link" href="/#/movie/{{id}}">
-            <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
+        <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
 
-        </a>
-        <p class="card-text" data-id={{id}}><i
-                class="material-icons icon-raiting icon-raiting-markup">star_rate</i>{{vote_average}}</p>
+        <p class="card-text" ><i
+                class="material-icons icon-raiting icon-raiting-markup">star_rate</i><span>{{vote_average}}</span></p>
     </div>
 
     <div class="card-release-general">
-        <h5 class="card-main-title" data-id={{id}}>{{title}}</h5>
+        <h5 class="card-main-title">{{title}}</h5>
         <p class="text-release-vote">{{release_date}}</p>
         <div class="btn-group btn-group-sm status__film__js" data-container={{id}} role="group">
         </div>
