--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -25,14 +25,7 @@ body {
   font-family: Noto Sans TC, sans-serif;
   letter-spacing: 0.03em;
   margin: 0;
-}
-
-h5 {
-  font-family: Noto Sans TC, sans-serif;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 1.19;
-  text-decoration: none;
+  font-weight: 400;
 }
 
 ul {
@@ -41,6 +34,7 @@ ul {
 
 img {
   border-style: none;
+  // max-width: 100%;
 }
 
 input,
@@ -56,10 +50,10 @@ input:focus {
 select {
   outline: none;
   border: none;
-}
 
-select:focus {
-  outline: none;
+  &:focus {
+    outline: none;
+  }
 }
 
 .is-hidden {
