--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -7,14 +7,23 @@
 }
 
 .navigation {
-  padding-left: 117px;
-  padding-right: 32px;
+  padding-left: 15px;
+  padding-right: 15px;
   position: relative;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 75px;
+  height: 80px;
+
+  @media screen and (min-width: 768px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  // @media screen and (min-width: 1024px) {
+
+  // }
 
   & .navigation__list {
     display: flex;
@@ -49,8 +58,12 @@
 .header-logo-link {
   position: absolute;
   left: -12px;
-  top: -2px;
-  padding: 12px 55px 12px 25px;
+  top: 0px;
+  padding: 16px 39px 16px 21px;
+
+  @media screen and (min-width: 768px) {
+    padding: 12px 55px 12px 25px;
+  }
 
   font-weight: 700;
   font-size: 16px;
@@ -64,6 +77,10 @@
 
 .navigation-right-side {
   display: flex;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 270px;
+  }
 }
 
 .navigation__movie__list.is-hidden {
@@ -74,7 +91,6 @@
   width: 400px;
   height: 30px;
   position: relative;
-  margin-right: 192px;
 
   & .search__films__title {
     margin: 0;
@@ -167,6 +183,10 @@
   &:focus {
     outline: none;
   }
+}
+
+.menu-lang-user {
+  display: flex;
 }
 
 .languages {
