all differents styles

--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -4,6 +4,9 @@
 
 .header {
   background-color: $headerFooterColor;
+  // position: sticky;
+  // top: -1px;
+  // z-index: 99999;
 }
 
 .navigation {
