--- a/src/templates/movieCard/actors.hbs
+++ b/src/templates/movieCard/actors.hbs
@@ -7,7 +7,9 @@
     <ul class="list__actors">
         {{#each this}}
         <li class="list__actor-card">
-            <img src="{{profile_path}}" width="100px" alt="{{name}}">
+
+            <img src="{{profile_path}}" width="100px" alt="{{name}}" width="100px" height="150px">
+
             <h3 class="list__actor-name">{{name}}</h3>
             <p class="list__actor-moviename">{{character}}</p>
         </li>
