--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -1,10 +1,11 @@
 {{#each this}}
-<div data-id={{id}} class="card" data-poster={{poster_path}} data-vote={{vote_average}} data-title={{title}} data-release={{release_date}}>
+<div data-id={{id}} class="card" data-poster={{poster_path}} data-vote={{vote_average}} data-title={{title}}
+    data-release={{release_date}}>
 
     <div class="card__movie_markup">
-        <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
+        <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} width="300px" height="450px" />
 
-        <p class="card-text" ><i
+        <p class="card-text"><i
                 class="material-icons icon-raiting icon-raiting-markup">star_rate</i><span>{{vote_average}}</span></p>
     </div>
 
