--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -1,6 +1,6 @@
 <div class="movie__markup__card ">
   <div class="movie__markup__img">
-    <img src="{{poster_path}}" width="300px" alt={{title}} />
+    <img src="{{poster_path}}" width="300px" alt={{title}} width="300px" height="450px" />
   </div>
   <div class="movie__content">
     <div class="card-body">
@@ -23,26 +23,26 @@
 <div>
   <div class="movie__markup__tab">
     <button class="movie__markup__tablinks " id="defaultOpen" data-tabname="actors">
-        {{#if languageRu}}
-          Актеры
-        {{else}}
-          Actors
-        {{/if}}
-        </button>
+      {{#if languageRu}}
+      Актеры
+      {{else}}
+      Actors
+      {{/if}}
+    </button>
     <button class="movie__markup__tablinks" data-tabname="reviews">
-        {{#if languageRu}}
-          Отзывы
-        {{else}}
-          Reviews
-        {{/if}}
-        </button>
+      {{#if languageRu}}
+      Отзывы
+      {{else}}
+      Reviews
+      {{/if}}
+    </button>
     <button class="movie__markup__tablinks" data-tabname="trailers">
-        {{#if languageRu}}
-          Трейлеры
-        {{else}}
-          Trailers
-        {{/if}}
-        </button>
+      {{#if languageRu}}
+      Трейлеры
+      {{else}}
+      Trailers
+      {{/if}}
+    </button>
   </div>
 
   <!-- Tab content -->
