add interests btns

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,5 @@
 // @import './header/choices';
 @import './header/menu';
 @import './header/menuDesktop';
-@import './movieList/interests';
 @import './modal/modal';
-
+@import './movieList/interestsBtn';
