--- a/src/scss/movieList/_movie-card.scss
+++ b/src/scss/movieList/_movie-card.scss
@@ -94,6 +94,7 @@
   overflow: hidden;
   border-radius: 13px 13px 0 0;
   background-color: $ListMovieColor;
+  display: flex;
 }
 
 /* Style the buttons that are used to open the tab content */
