--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -56,6 +56,8 @@
 }
 
 .card__movie_markup {
+  border-radius: 13px 13px 0 0;
+  background-color: tomato;
   position: relative;
   // min-width: 273px;
   // max-width: 454px;
