--- a/src/templates/header/dropDownMenu.hbs
+++ b/src/templates/header/dropDownMenu.hbs
@@ -2,10 +2,10 @@
 <li class="menu__list__item user__item__js" data-status='favorites'><i class="material-icons icons__header_menu favorites">favorite_border</i>
     <p class="menu__list__title">Favorites</p>
 </li>
-<li class="menu__list__item user__item__js" data-status='watched'><i class="material-icons icons__header_menu watched">bookmark_border</i>
+<li class="menu__list__item user__item__js" data-status='watched'><i class="material-icons icons__header_menu watch__later">check_circle_outline</i>
     <p class="menu__list__title">Watched</p>
 </li>
-<li class="menu__list__item user__item__js" data-status='watchedLater'><i class="material-icons icons__header_menu watch__later">check_circle_outline</i>
+<li class="menu__list__item user__item__js" data-status='watchedLater'><i class="material-icons icons__header_menu watched">bookmark_border</i>
     <p class="menu__list__title">Watched Later</p>
 </li>
 <li class="menu__list__item"><i class="material-icons icons__header_menu sensor_door">sensor_door</i><a
