--- a/src/templates/movieMarkup.hbs
+++ b/src/templates/movieMarkup.hbs
@@ -2,7 +2,7 @@
 <div data-id={{id}} class="card" data-poster={{poster_path}} data-vote={{vote_average}} data-title={{title}} data-release={{release_date}}>
 
     <div class="card__movie_markup">
-        <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} />
+        <img class="card-img-top" src="{{poster_path}}" data-id={{id}} alt={{title}} width="1px" height="1px" />
 
         <p class="card-text" ><i
                 class="material-icons icon-raiting icon-raiting-markup">star_rate</i><span>{{vote_average}}</span></p>
