--- a/src/scss/movieList/_movie-card.scss
+++ b/src/scss/movieList/_movie-card.scss
@@ -94,7 +94,7 @@
 .icons-card-movie {
   font-size: 40px;
 }
-/* Style the tab */
+/* Style the tab дд*/
 .movie__markup__tab {
   overflow: hidden;
   border-radius: 13px 13px 0 0;
