--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -78,7 +78,7 @@
   width: 60px;
   height: 30px;
   letter-spacing: 0.03em;
-  // margin-bottom: 15px;
+  // margin-bottom: 15pxоо;
 }
 
 .card-release-general {
