back, find by actors

--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -1,3 +1,11 @@
+<button type="button" class="btn__back">        
+  {{#if languageRu}}
+    Назад
+  {{else}}
+    Back
+  {{/if}}
+</button>
+
 <div class="movie__markup__card ">
   <div class="movie__markup__img">
     <img src="{{poster_path}}" width="300px" alt={{title}}  width="300px" height="450px" />
