--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -102,7 +102,8 @@
     font-size: 13px;
 
     & .search_films_name,
-    .search_films_genres {
+    .search_films_genres,
+    .search_films_actors {
       cursor: pointer;
     }
 
