--- a/src/scss/header/_login.scss
+++ b/src/scss/header/_login.scss
@@ -1,6 +1,10 @@
 .material-icons.user,
 .material-icons.login {
-  font-size: 40px;
+  font-size: 35px;
   cursor: pointer;
   vertical-align: bottom;
+
+  @media screen and (min-width: 768px) {
+    font-size: 38px;
+  }
 }
