--- a/src/templates/movieCard/actors.hbs
+++ b/src/templates/movieCard/actors.hbs
@@ -1,10 +1,9 @@
-
 <div class="card__actors">
-  <ul class="list__actors">
+    <ul class="list__actors">
         {{#each this}}
         <li class="list__actor-card">
 
-            <img src="{{profile_path}}" width="100px" alt="{{name}}" width="100px" height="150px">
+            <img src="{{profile_path}}" alt="{{name}}" width="100px" height="150px">
 
             <h3 class="list__actor-name">{{name}}</h3>
             <p class="list__actor-moviename">{{character}}</p>
