--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -1,6 +1,6 @@
 $backgroundColor: #1a143b;
 $ListMovieColor: #281f55;
-$headerFooterColor: #30246b;
+$headerFooterColor: #3c3075;
 $secondaryColor: #f8104d;
 
 $primaryColorCircle: #f8104d;
@@ -85,11 +85,11 @@ select {
 }
 
 .main {
-  padding-top: 15px;
+  padding-top: 20px;
 }
 
 .material-icons {
-  color: #6152a8;
+  color: #c8c0ed;
   justify-content: center;
   align-items: center;
 }
