modal team, hbs messege

--- a/src/scss/footer/footer-main.scss
+++ b/src/scss/footer/footer-main.scss
@@ -13,6 +13,10 @@
   font-weight: 300;
 }
 
+.footer_copyright.team {
+  cursor: pointer;
+}
+
 .material-icons.footer-icon {
   color: #f8104d;
   font-size: 10px;
