--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -8,7 +8,7 @@
 
 <div class="movie__markup__card ">
   <div class="movie__markup__img">
-    <img src="{{poster_path}}" width="300px" alt={{title}}  width="300px" height="450px" />
+    <img src="{{poster_path}}" alt={{title}}  width="300px" height="450px" />
   </div>
   <div class="movie__content">
     <div class="card-body">
