--- a/src/templates/team.hbs
+++ b/src/templates/team.hbs
@@ -1,22 +1,26 @@
 <div class="team__container">
-    <h1>Angry Beavers</h1>
-    <img src="{{baevers}}" alt='Angry Beavers'  width="100px" height="100px" />
+    <h2 class="team__title">Angry Beavers</h1>
+        <img src="{{baevers}}" alt='Angry Beavers' width="294px" height="188px" />
 
-    <div>
-        <img src="{{dagget}}" alt='dagget'  width="50px" height="50px" />
-        <h2>Team lead</h2>
-        <p>Ruslan aka Bulka Z Djemom</p>
-    </div>
+        <div class="team__main_container">
+            <div class="team__card">
+                <img src="{{dagget}}" alt='dagget' width="100px" height="100px" />
+                <h3 class="team__card__title">Team lea
+    </h2>
 
-    <div>
-        <img src="{{norb}}" alt='norb'  width="50px" height="50px" />
-        <h2>Scrum Master</h2>
-        <p>Dima aka DimRom76</p>
-    </div>
+    <p class="team__card_text">Ruslan aka Bulka Z Djemom</p>
+</div>
 
-    <div>
-        <img src="{{treeflower}}" alt='treeflower'  width="50px" height="50px" />
-        <h2>Leading developer</h2>
-        <p>Nika aka Nikule4ka</p>
-    </div>
+<div class="team__card">
+    <img src="{{norb}}" alt='norb' width="100px" height="100px" />
+    <h3 class="team__card__title">Scrum Master</h2>
+        <p class="team__card_text">Dima aka DimRom76</p>
+</div>
+
+<div class="team__card">
+    <img src="{{treeflower}}" alt='treeflower' width="100px" height="100px" />
+    <h3 class="team__card__title">Leading developer</h2>
+        <p class="team__card_text">Nika aka Nikule4ka</p>
+</div>
+</div>
 </div>
