--- a/src/scss/footer/footer-main.scss
+++ b/src/scss/footer/footer-main.scss
@@ -1,8 +1,9 @@
 .footer_container {
   height: 50px;
   background: $headerFooterColor;
-  padding: 30px 10px;
+  padding: 12px 10px;
   text-align: center;
+  width: 100%;
 
   // box-shadow: inset 0 0 6px #6152a8;
 }
