--- a/src/scss/movieList/_movie-card.scss
+++ b/src/scss/movieList/_movie-card.scss
@@ -14,6 +14,7 @@
   @media screen and (min-width: 1024px) {
     padding: 20px 10px 10px 0px;
     font-size: 20px;
+    margin-top: 0;
   }
 
   .movie__markup__img {
