--- a/src/scss/header/_menuDesktop.scss
+++ b/src/scss/header/_menuDesktop.scss
@@ -100,6 +100,6 @@ $menu-items: 5;
 
 .icons__header_menu {
   font-size: 20px;
-  vertical-align: sub;
+  vertical-align: middle;
   margin-right: 5px;
 }
