--- a/src/scss/movieList/_interestsBtn.scss
+++ b/src/scss/movieList/_interestsBtn.scss
@@ -5,8 +5,12 @@
   background-color: $ListMovieColor;
   display: flex;
   justify-content: space-between;
-  width: 700px;
+  width: 290px;
   margin: 0 auto 10px auto;
+
+  @media (min-width: 768px) {
+    width: 425px;
+  }
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -22,7 +26,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 10px 6px;
   transition: 0.3s;
   color: #fff;
 }
