--- a/src/templates/header/interestsBtn.hbs
+++ b/src/templates/header/interestsBtn.hbs
@@ -1,6 +1,11 @@
 <div class="movie__interests__tab">
-    <button class="movie__interests__tablinks"  data-status="onMain"><i class="material-icons icons__header_menu" data-status="onMain">home</i>На главную</button>
-    <button class="movie__interests__tablinks "data-status="favorites"><i class="material-icons icons__header_menu favorites" data-status="favorites">favorite_border</i>Избранное</button>
-    <button class="movie__interests__tablinks" data-status="watched"><i class="material-icons icons__header_menu watch__later" data-status="watched">check_circle_outline</i>Просмотрено</button>
-    <button class="movie__interests__tablinks" data-status="watchedLater"><i class="material-icons icons__header_menu watched" data-status="watchedLater">bookmark_border</i>Посмотреть позже</button>
+    <button class="movie__interests__tablinks " data-status="favorites"><i
+            class="material-icons icons__header_menu favorites"
+            data-status="favorites">favorite_border</i>Избранное</button>
+    <button class="movie__interests__tablinks" data-status="watched"><i
+            class="material-icons icons__header_menu watch__later"
+            data-status="watched">check_circle_outline</i>Просмотрено</button>
+    <button class="movie__interests__tablinks" data-status="watchedLater"><i
+            class="material-icons icons__header_menu watched"
+            data-status="watchedLater">bookmark_border</i>Опосля</button>
 </div>
