--- a/src/templates/team.hbs
+++ b/src/templates/team.hbs
@@ -1,26 +1,27 @@
 <div class="team__container">
-    <h2 class="team__title">Angry Beavers</h1>
-        <img src="{{baevers}}" alt='Angry Beavers' width="294px" height="188px" />
+    <h2 class="team__title">Angry Beavers</h2>
+    <img src="{{baevers}}" alt='Angry Beavers' width="294px" height="188px" />
 
-        <div class="team__main_container">
-            <div class="team__card">
-                <img src="{{dagget}}" alt='dagget' width="100px" height="100px" />
-                <h3 class="team__card__title">Team lea
-    </h2>
+    <div class="team__main_container">
+        <div class="team__card">
+            <img src="{{dagget}}" alt='dagget' width="100px" height="100px" />
+            <h3 class="team__card__title">Team lea
+            </h3>
 
-    <p class="team__card_text">Ruslan aka Bulka Z Djemom</p>
-</div>
+            <p class="team__card_text">Ruslan aka Bulka Z Djemom</p>
+        </div>
 
-<div class="team__card">
-    <img src="{{norb}}" alt='norb' width="100px" height="100px" />
-    <h3 class="team__card__title">Scrum Master</h2>
-        <p class="team__card_text">Dima aka DimRom76</p>
-</div>
+        <div class="team__card">
+            <img src="{{norb}}" alt='norb' width="100px" height="100px" />
+            <h3 class="team__card__title">Scrum Master</h3>
+            <p class="team__card_text">Dima aka DimRom76</p>
+        </div>
 
-<div class="team__card">
-    <img src="{{treeflower}}" alt='treeflower' width="100px" height="100px" />
-    <h3 class="team__card__title">Leading developer</h2>
-        <p class="team__card_text">Nika aka Nikule4ka</p>
-</div>
-</div>
+        <div class="team__card">
+            <img src="{{treeflower}}" alt='treeflower' width="100px" height="100px" />
+            <h3 class="team__card__title">Leading developer
+            </h3>
+            <p class="team__card_text">Nika aka Nikule4ka</p>
+        </div>
+    </div>
 </div>
