--- a/src/scss/footer/team.scss
+++ b/src/scss/footer/team.scss
@@ -1,7 +1,8 @@
 .team__container {
+  background-color: $headerFooterColor;
   align-items: center;
   flex-wrap: wrap;
-  padding: 15px;
+  padding: 15px 50px;
   text-align: center;
   width: 700px;
   height: 600px;
@@ -15,29 +16,50 @@
 
 .team__main_container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  // flex-direction: column;
 
-  width: 640px;
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
 
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  // box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+  //   0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  // border-radius: 4px;
 
   & img {
-    display: block;
+    //display: block;
     max-width: 100%;
-    height: auto;
+    // height: auto;
+    max-height: 100px;
+  }
+}
+
+.content {
+  flex: 1;
+  line-height: 2;
+
+  & > a {
+    text-decoration: underline;
+    color: blue;
   }
 }
 
 .team__card {
-  margin-bottom: 10px;
-  display: flex;
-  align-items: flex-start;
+  margin: 1em auto;
+  padding: 1em;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
+  &:hover {
+    box-shadow: 4px 4px rgba(0, 0, 0, 0.25);
+    top: -4px;
+    left: -4px;
+  }
+
+  &.reverse {
+    flex-direction: row-reverse;
+  }
 
   & .team__card__title {
     font-size: 14px;
@@ -47,11 +69,3 @@
 .team__card_text {
   font-size: 12px;
 }
-
-// .team__card {
-//   display: flex;
-//   align-items: flex-start;
-//   margin-bottom: 20px;
-//   margin-left: auto;
-//   margin-right: auto;
-// }
