--- a/src/templates/header/dropDownMenuEn.hbs
+++ b/src/templates/header/dropDownMenuEn.hbs
@@ -1,11 +1,11 @@
 <li class="menu__list__item user__item__js" data-status='favorites'><i class="material-icons icons__header_menu favorites">favorite_border</i>
-    <p class="menu__list__title">Любимые</p>
+    <p class="menu__list__title">Favorites</p>
 </li>
 <li class="menu__list__item user__item__js" data-status='watched'><i class="material-icons icons__header_menu watch__later">check_circle_outline</i>
-    <p class="menu__list__title">Просмотренные</p>
+    <p class="menu__list__title">Watched</p>
 </li>
 <li class="menu__list__item user__item__js" data-status='watchedLater'><i class="material-icons icons__header_menu watched">bookmark_border</i>
-    <p class="menu__list__title">Опосля</p>
+    <p class="menu__list__title">Later</p>
 </li>
 <li class="menu__list__item"><i class="material-icons icons__header_menu sensor_door">sensor_door</i><a
-        class="user__logout" href="#">Выйти</a></li>
+        class="user__logout" href="#">Log out</a></li>
