--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -45,9 +45,8 @@
 
   .card-img-top {
     width: 100%;
+    height: inherit;
     display: block;
-    // height: 440.63px;
-
     border-radius: 13px 13px 0 0;
   }
 }
