--- a/src/templates/team.hbs
+++ b/src/templates/team.hbs
@@ -1,33 +1,33 @@
 <div class="team__container">
     <h2 class="team__title">Angry Beavers</h2>
-    <img src="{{baevers}}" alt='Angry Beavers' width="294px" height="188px" />
+    <img src="{{baevers}}" alt='Angry Beavers' width="244px" height="138px" />
 
     <div class="team__main_container">
         <div class="team__card">
-            <img class="team__card__img" src="{{dagget}}" alt='dagget' width="100px" height="100px" />
+            <img class="team__card__img" src="{{dagget}}" alt='dagget' />
 
             <div class="content">
                 <h3 class="team__card__title">Team lead</h3>
                 <p class="team__card_text">Ruslan aka Bulka Z Djemom</p>
-                <a href="https://github.com/RuslanZahriadskyi" alt="Ruslan" target="_blank">Git</a>
+                <a href="https://github.com/RuslanZahriadskyi" alt="Ruslan" target="_blank"><i class="github"></i></a>
             </div>
         </div>
 
         <div class="team__card reverse">
             <img class="team__card__img" src="{{norb}}" alt='norb' width="100px" height="100px" />
-             <div class="content">
+            <div class="content">
                 <h3 class="team__card__title">Scrum Master</h3>
                 <p class="team__card_text">Dima aka DimRom76</p>
-                <a href="https://github.com/DimRom76" alt="Dima" target="_blank">Git</a>
+                <a href="https://github.com/DimRom76" alt="Dima" target="_blank"><i class="github"></i></a>
             </div>
         </div>
 
         <div class="team__card">
             <img class="team__card__img" src="{{treeflower}}" alt='treeflower' width="100px" height="100px" />
-             <div class="content">
+            <div class="content">
                 <h3 class="team__card__title">Leading developer</h3>
                 <p class="team__card_text">Nika aka Nikule4ka</p>
-                <a href="https://github.com/nikule4ka" alt="Nika" target="_blank">Git</a>
+                <a href="https://github.com/nikule4ka" alt="Nika" target="_blank"><i class="github"></i></a>
             </div>
         </div>
     </div>
