--- a/src/scss/footer/team.scss
+++ b/src/scss/footer/team.scss
@@ -1,11 +1,24 @@
 .team__container {
   background-color: $headerFooterColor;
+  box-shadow: 0 1px 5px rgb(252 251 251 / 50%), 0 1px 17px rgb(97 82 168 / 80%);
   align-items: center;
   flex-wrap: wrap;
-  padding: 15px 50px;
+  padding: 5px 10px;
   text-align: center;
-  width: 700px;
-  height: 600px;
+  width: 300px;
+  height: 400px;
+
+  @media (min-width: 768px) {
+    padding: 5px 15px;
+    width: 684px;
+    height: 451px;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 15px 15px;
+    width: 700px;
+    height: 451px;
+  }
 
   & .team__title {
     margin-bottom: 20px;
@@ -17,39 +30,64 @@
 .team__main_container {
   display: flex;
   justify-content: space-between;
-  // flex-direction: column;
 
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px;
+  height: auto;
+
+  padding-top: 10px;
 
   // box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
   //   0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   // border-radius: 4px;
 
   & img {
-    //display: block;
-    max-width: 100%;
-    // height: auto;
-    max-height: 100px;
+    width: 50px;
+    height: 50px;
+
+    // max-width: 100%;
+
+    // max-height: 100px;
+
+    @media screen and (min-width: 768px) {
+      width: 100px;
+      height: 100px;
+    }
   }
 }
 
 .content {
-  flex: 1;
-  line-height: 2;
+  display: flex;
+  flex-direction: column;
+
+  & .github {
+    background: url(../images/github.svg) no-repeat 0 0;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+
+    &:hover {
+      background: url(../images/github-hover.svg) no-repeat 0 0;
+      width: 20px;
+      height: 20px;
+      display: inline-block;
+    }
+  }
 
   & > a {
     text-decoration: underline;
-    color: blue;
   }
 }
 
 .team__card {
-  margin: 1em auto;
-  padding: 1em;
+  width: -webkit-fill-available;
+  height: inherit;
+  margin: 0px 5px 0px 5px;
+  padding: 7px 8px 5px 8px;
+
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
+  @media screen and (min-width: 768px) {
+    padding: 10px;
+  }
 
   &:hover {
     box-shadow: 4px 4px rgba(0, 0, 0, 0.25);
@@ -62,10 +100,27 @@
   }
 
   & .team__card__title {
+    font-size: 11px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 12px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  }
+
+  & .team__card_text {
+    font-size: 11px;
+    margin-bottom: 5px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
     font-size: 14px;
   }
-}
-
-.team__card_text {
-  font-size: 12px;
 }
