--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -7,6 +7,9 @@ $primaryColorCircle: #f8104d;
 $secondaryColorCircle: #fff;
 $backgroundColorCircle: #281f55;
 
+$border-radius: 3px;
+$primary: #f2f2f2;
+
 html {
   box-sizing: border-box;
 }
