--- a/src/templates/header/dropDownMenu.hbs
+++ b/src/templates/header/dropDownMenu.hbs
@@ -1,8 +1,8 @@
 <li class="menu__list__item user__item__js" data-status='favorites'><i class="material-icons icons__header_menu favorites">favorite_border</i>
-    <p class="menu__list__title">Любимые</p>
+    <p class="menu__list__title">Избранное</p>
 </li>
 <li class="menu__list__item user__item__js" data-status='watched'><i class="material-icons icons__header_menu watch__later">check_circle_outline</i>
-    <p class="menu__list__title">Просмотренные</p>
+    <p class="menu__list__title">Просмотрено</p>
 </li>
 <li class="menu__list__item user__item__js" data-status='watchedLater'><i class="material-icons icons__header_menu watched">bookmark_border</i>
     <p class="menu__list__title">Опосля</p>
