add lang hbs render user films  fix bug with buttons

--- a/src/templates/loginRegFormEn.hbs
+++ b/src/templates/loginRegFormEn.hbs
@@ -17,6 +17,7 @@
                 >Email Address
                 <input
                   type="email"
+                  placeholder="moviemania@gmail.com"
                   class="input email__sign__in"
                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                   required
@@ -27,7 +28,7 @@
                 <input
                   type="password"
                   class="input password__sign__in"
-                  placeholder=" 4 characters minimum"
+                  placeholder="6 characters minimum"
                   data-type="password"
                   minlength="4"
                   maxlength="16"
@@ -37,9 +38,6 @@
               <button type="submit" class="button submit__login">Sign In</button>
             </form>
             <div class="hr"></div>
-            <div class="foot-lnk">
-              <a href="#forgot">Forgot Password?</a>
-            </div>
           </div>
           <div class="sign-up-htm">
             <form class="form__sign__up group">
@@ -52,7 +50,7 @@
                 <input
                   type="password"
                   class="input password__sign__up"
-                  placeholder=" 4 characters minimum"
+                  placeholder="6 characters minimum"
                   data-type="password"
                   minlength="4"
                   maxlength="16"
@@ -63,6 +61,7 @@
                 >Email Address
                 <input
                   type="email"
+                  placeholder="moviemania@gmail.com"
                   class="input email__sign__up"
                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                   required
