--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import './base/general.scss';
 
-@import './preloaderPage/circle-preloader.scss';
-@import './preloaderPage/words-preloader.scss';
+// @import './preloaderPage/circle-preloader.scss';
+// @import './preloaderPage/words-preloader.scss';
 
 @import './pagination/pagination.scss';
 
